# evol-mod-bullet3

./: meson.build  module.lua
include/: EvMotionState.h  physics_api.h
meta/: evmod.configvars  evmod.namespaces  evmod.types
src/: mod.c
src/cpp/: EvMotionState.cpp  physics.cpp
src/cpp/visual-dbg/: BulletDbg.cpp  BulletDbg.hpp
src/lua/: script_api.lua
subprojects/: bullet3.wrap
